--- a/segus.css
+++ b/segus.css
@@ -5,6 +5,7 @@
 body{
     font-family:serif;
     margin: 0;
+    background-color: gray;
 }
 
 h1 {font-size: 3.5em;}
@@ -14,7 +15,7 @@ p{font-size: 1.25em;}
 ul{list-style: none;}
 
 .conteiner{
-    max-width: 1200px;
+    max-width: 1400px;
     margin: auto;
 }
 
@@ -103,7 +104,24 @@ header a:hover{
     border-radius: 10px;
 }
 
-.carta__uno :first-child{
+footer .conteiner{
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* .carta__uno ,.carta__dos ,.carta__tres{
+    background-position: center center;
+    background-size: cover;
+    width: 90vw;
+    margin: 15px;
+    padding: 40px;
+    margin-left: -30px;
+    border-radius: 8px;
+} */
+/* .carta__uno :first-child{
     background-image: linear-gradient(
         0deg,
         rgba(0,0,0,0.5),
@@ -112,10 +130,20 @@ header a:hover{
     ,url(./iconos/juego.png);
 }
 
-.carta :nth-child(2){
-    font-size: 2em;
+.carta__uno :nth-child(2){
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url(./fondos/pasta.jpg)
 }
 
-.carta :nth-child(3){
-    font-size: 2em;
-}
+.carta__uno :nth-child(3){
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url(./fondos/hambur.jpg);
+} */
