--- a/segus.css
+++ b/segus.css
@@ -5,10 +5,11 @@
 body{
     font-family:serif;
     margin: 0;
-    background-color: gray;
+    background-color: black;
 }
 
-h1 {font-size: 3.5em;}
+
+h1 {font-size: 3.2em;}
 h2{font-size: 2.7em}
 h3{font-size: 2em;}
 p{font-size: 1.25em;}
@@ -20,7 +21,7 @@ ul{list-style: none;}
 }
 
 header{
-    background-color: gray;
+    background-color: black;
 }
 header .logo{
     margin: 0;
@@ -52,7 +53,7 @@ header a{
 }
 
 header a:hover{
-    color: black;
+    color: grey;
 }
 
 #hero{  
@@ -75,33 +76,48 @@ header a:hover{
 
 #hero h1{
     color: white;
+    font-family:sans-serif;
 }
 
-#somos__proya .conteiner{
-    text-align: center;
-    padding: 200px 12px;
+#hero li{
+    font-size: 1.5em;
+    color: rgb(219, 219, 219);
 }
 
 #nuestros__programas{
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(103, 100, 100);
     text-align: center;
     color: white;
+}
+
+.carta__uno{
+    border: solid black 4px;
+    background-color: rgb(181, 181, 181);
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.carta__dos{
+    border: solid black 4px;
+    background-color: rgb(181, 181, 181);
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.carta__tres{
+    border: solid black 4px;
+    background-color: rgb(181, 181, 181);
+    margin: 10px;
+    border-radius: 10px;
 }
 
 #nuestros__programas .conteiner{
     padding:  20px 0px;
 }
+
 #nuestros__programas h2{
     margin-top: 0;
     font-size: 3em;
-}
-
-#nuestros__programas .carta{
-    background-position: center;
-    background-size: cover;
-    padding: 50px 0px;
-    margin: 30px;
-    border-radius: 10px;
 }
 
 footer .conteiner{
@@ -109,41 +125,38 @@ footer .conteiner{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
-
-/* .carta__uno ,.carta__dos ,.carta__tres{
-    background-position: center center;
-    background-size: cover;
-    width: 90vw;
-    margin: 15px;
-    padding: 40px;
-    margin-left: -30px;
-    border-radius: 8px;
-} */
-/* .carta__uno :first-child{
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url(./iconos/juego.png);
+/*-------------------------------------------------------animaciones-------------------------------------------------------------------*/
+.animate__animated{
+    animation-duration: .3s;
 }
 
-.carta__uno :nth-child(2){
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url(./fondos/pasta.jpg)
-}
+@media screen and (min-width: 720px) {
 
-.carta__uno :nth-child(3){
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url(./fondos/hambur.jpg);
-} */
+    header{
+        position: fixed;
+        width: 100%;
+    }
+
+    header .conteiner{
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    header nav{
+        flex-direction: row;
+        padding-bottom: 0;
+        padding-left: 20px;
+    }
+
+    header .logo{
+        font-size: 2em;
+        margin-right:80px;
+    }
+
+    #hero{
+        font-size: 1em;
+    }
+}
