--- a/segus.css
+++ b/segus.css
@@ -68,7 +68,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url(./fondos/x.jpg);
+    ,url(./imagenes/fondos/x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
