--- a/segus.css
+++ b/segus.css
@@ -84,7 +84,7 @@ header a:hover{
     color: rgb(219, 219, 219);
 }
 
-#nuestros__programas{
+#nuestras__promociones{
     background-color: rgb(103, 100, 100);
     text-align: center;
     color: white;
@@ -111,11 +111,11 @@ header a:hover{
     border-radius: 10px;
 }
 
-#nuestros__programas .conteiner{
+#nuestras__promociones .conteiner{
     padding:  20px 0px;
 }
 
-#nuestros__programas h2{
+#nuestras__promociones h2{
     margin-top: 0;
     font-size: 3em;
 }
