--- a/css/segus.css
+++ b/css/segus.css
@@ -69,7 +69,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url(./imagenes/fondos/x.jpg);
+    ,url(../imagenes/fondos/x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
