--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,24 @@
+*{
+    box-sizing: border-box;
+}
+
+body{
+    font-family:serif;
+    margin: 0;
+    background-color: rgb(124, 124, 124);
+}
+
+h1 {font-size: 3.2em;}
+h2{font-size: 2.7em}
+h3{font-size: 2em;}
+p{font-size: 1.25em;}
+ul{list-style: none;}
+
+.conteiner{
+    max-width: 1600px;
+    margin: auto;
+}
+
 header{
     background-color: black;
 
