--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -14,11 +14,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    #hero h1{
+    h1{
         color: white;
         font-family:sans-serif; 
     }
-    #hero li{
+    li{
+        display: flex;
+        align-items: baseline;
         font-size: 1.5em;
         color: rgb(219, 219, 219);
     }
