--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -30,6 +30,8 @@
     background-color: rgb(103, 100, 100);
     text-align: center;
     color: white;
+    margin-top: -40px;
+    height: 140vh;
     #nuestras__promociones .conteiner{
         padding:  20px 0px;
     }
