--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ footer .conteiner {
   text-align: center;
   color: white;
   margin-top: -40px;
-  height: 140vh;
+  height: 90%;
 }
 #nuestras__promociones #nuestras__promociones .conteiner {
   padding: 20px 0px;
