--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -31,7 +31,7 @@
     text-align: center;
     color: white;
     margin-top: -40px;
-    height: 140vh;
+    height: 90%;
     #nuestras__promociones .conteiner{
         padding:  20px 0px;
     }
