--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -4,19 +4,20 @@
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    height: 90vh;
     background-image: linear-gradient(
         0deg,
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url(../imagenes/fondos/x.jpg);
+    ,url(../../imagenes/fondos/restaurante.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     background-position: center;
+    height: 55em;
     h1{
-        color: white;
-        font-family:sans-serif; 
+        color: rgb(207, 234, 239);
+        font-family:cursive; 
     }
     li{
         display: flex;
@@ -27,35 +28,39 @@
 }
 
 #nuestras__promociones{
-    background-color: rgb(103, 100, 100);
+    background-color: white;
     text-align: center;
     color: white;
-    margin-top: -40px;
-    height: 90%;
-    #nuestras__promociones .conteiner{
-        padding:  20px 0px;
-    }
-    #nuestras__promociones h2{
-        margin-top: 0;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    h2{
+        color: rgb(70, 79, 79);
+        margin-top: 10px;
         font-size: 3em;
     }
     .carta__uno{
-        border: solid black 4px;
         background-color: rgb(181, 181, 181);
-        margin: 10px;
+        margin: 30px;
         border-radius: 10px;
+        box-shadow:black 0px 0px 20px 3px;
+        padding-top: 5px;
+        padding-bottom: 8px;
     }
     .carta__dos{
-        border: solid black 4px;
         background-color: rgb(181, 181, 181);
-        margin: 10px;
+        margin: 30px;
         border-radius: 10px;
+        box-shadow:black 0px 0px 20px 3px;
+        padding-top: 5px;
+        padding-bottom: 8px;
     }
     .carta__tres{
-        border: solid black 4px;
         background-color: rgb(181, 181, 181);
-        margin: 10px;
+        margin: 30px;
         border-radius: 10px;
+        box-shadow:black 0px 0px 15px 3px;
+        padding-top: 5px;
+        padding-bottom: 8px;
     }
 }
 
