--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -2,6 +2,16 @@ article #menu{
     display: flex;
     flex-direction: column; 
     text-align: center;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url(../../imagenes/fondos/pasta.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 30em;
     h2{
         margin-top: 0px;
         font-size: 3em;
