--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -9,7 +9,7 @@
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url(https://www.google.com/url?sa=i&url=https%3A%2F%2Ffoodandpleasure.com%2Frestaurantes-bonitos-cdmx%2F&psig=AOvVaw0nDVgtR9RvMpcmeebBW2P1&ust=1667621927053000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCJiPzvbVk_sCFQAAAAAdAAAAABAE);
+    ,url(../../imagenes/fondos/restaurante.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
