--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -9,7 +9,7 @@
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("./imagenes/fondos/restaurante.jpg");
+    ,url(./imagenes/fondos/restaurante.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
