--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -9,15 +9,16 @@
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url(./imagenes/fondos/restaurante.jpg);
+    ,url(../imagenes/fondos/restaurante.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    height: 55em;
+    height: 40em;
     h1{
         color: rgb(207, 234, 239);
-        font-family:cursive; 
+        font-family:cursive;
+        margin-bottom: 40px;
     }
     li{
         display: flex;
@@ -25,16 +26,18 @@
         font-size: 1.5em;
         color: rgb(219, 219, 219);
     }
+    #li{
+        translate: (1px -30px);
+    }
 }
 
 #nuestras__promociones{
-    background-color: white;
     text-align: center;
     color: white;
     padding-top: 20px;
     padding-bottom: 30px;
     h2{
-        color: rgb(70, 79, 79);
+        color: rgb(102, 113, 113);
         margin-top: 10px;
         font-size: 3em;
     }
