--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -1,13 +1,8 @@
 article #menu{
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    min-height: 1430vh;
     text-align: center;
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url(../../imagenes/fondos/pasta.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
