--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -2,12 +2,12 @@ footer{
     width: 100%;
     height: 15vh;
     background-color: black;
+    margin-top: auto;
     .conteiner{
         display: flex;
         justify-content: center;
         align-items: center;
         color: white;
-        text-decoration:underline white;
     }
     #img__footer{
         display: flex;
