--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -4,11 +4,9 @@
     justify-content: center;
     text-align: center;
     margin-top: 40px;
-    width: 100vw;
-    height: 105vh;
     padding-bottom: 30px;
     .form{
-        width: 90vw;
+        width:80vw;
         color: white;
         font-size: 1.2em;
         background-color: rgb(39, 39, 39);
@@ -65,20 +63,62 @@
 
 
 section{
+    display: flex;
+    flex-direction: column;
     p {
     font-size: 1.6em;
     text-align: center;
+    }
+    img{
+        width: 70px;
+        height: 70px;
+    }
+    a{
+        display: flex;
+        justify-content: center;
+        margin-left: 10px;
+        text-decoration: none;
     }
     .imagenes__siguenos {
         display: flex;
         justify-content: center;
         margin: 20px;
-        padding: 30px;
+        padding: 10px;
     }
 }
 
 @media screen and (min-width: 800px){
     aside .formulario{
-        margin-top: 130px;
+        padding: 100px;
+        width: 100vw;
+        .form{
+            width: 60vw;
+        }
+        .form__contacto{
+            width: 50vw;
+        }
+        textarea{
+            width: 50vw;
+        }
     }
+
+    section{
+        display: flex;
+        flex-direction: column;
+        p {
+        margin-top: -60px;
+        font-size: 2.2em;
+        text-align: center;
+        }
+        img{
+            width: 100px;
+            height: 100px;
+        }
+        .imagenes__siguenos {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 100px;
+        }
+    }
+
 }
