--- a/scss/pages/_galeria.scss
+++ b/scss/pages/_galeria.scss
@@ -1,152 +1,179 @@
-h2{
-    font-weight: 400;
-    text-align: center;
-    font-size: 4em;
-    padding: 80px;
-    font-size: 50px;
-}
-.linea{
-    background-color: violet;
-
-    height: 5px;
-    width: 100%;
-}
-.gal{
-    margin: 0;
-    padding: 0;
+.article__galeria{
+    margin-top: 100px;
+    h2{
+        width: 50%;
+        color: white;
+        border-bottom: 4px solid rgb(221, 222, 134);
+        font-size: 2em;
+        text-align: center;
+        font-family: cursive;
+        margin: auto;
+        padding: 20px;
+    }
     .galeria{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-        width: 95%;
+        width: 90%;
         margin: auto;
-        grid-gap: 10px;
+        grid-gap: 18px;
         padding: 40px 0;
         overflow: hidden;
     }
-    .galeria > a{
-        display: block;
-        position: relative;
-        overflow: hidden;
-        box-shadow: 0 0 6px rgba(0,0,0,0.5);
-    }
-    .galeria img{
+    img{
         width: 100%;
         vertical-align: top;
         height: 300px;
         object-fit: cover;
-        transition: transform 0.5s;
+        transition: transform 1s;
     }
-    .galeria a:hover{
+    a{
+        display: block;
+        position: relative;
+        overflow: hidden;
+        box-shadow: 0 0 20px 0px black;
+        border-radius: 4px;
+    }
+    .galeria a:hover img{
         filter: blur(2px);
-        transform: rotate(10deg) scale(1.3);
-        transition: transform 0.5s;
+        transform: scale(1.1);
     }
 }
 
-.caja{
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0,0,0,0.5);
-    transition: transform .3s ease-in-out;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
+.galeria2{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    bottom: 0;
+    right:0;
+    left: 0;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 1000;
     transform: scale(0);
-}
-.caja img{
-    width: 75vw;
-    max-height: 70vh;
-}
-.caja:target{
-    transform: scale(1);
-}
-.close{
-    display: block;
-    position: absolute;
-    text-align: center;
-    text-decoration: none;
-    line-height: 30px;
-    top: 40px;
-    right: 40px;
-    background-color: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-.next{
-    display: block;
-    height: 30px;
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
-}
-
-@media screen and (max-width: 400px){
-    .galeria{
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    transition: transform 1s;
+    img{
+        width: 50vw;
+        max-height: 50vh;
     }
-
     .close{
-        top: 200px;
-        right:10px;
+        display: block;
+        position: absolute;
+        top: 100px;
+        right: 200px;
+        color: black;
+        text-decoration: none;
+        width: 35px;
+        height: 35px;
+        background-color: white;
+        border-radius: 50%;
+        text-align: center;
+        line-height: 35px;
+        z-index: 2000;
+    }
+    .nextR{
+        display: block;
+        background-color: white;
+        margin-left: 5px;
+        color: black;
+        height: 40px;
+        width: 40px;
+        line-height: 40px;
+        border-radius: 0 10px 10px 0 ;
+        text-decoration: none;
+        text-align: center;
+    }
+    .nextL{
+        display: block;
+        background-color: white;
+        margin-right: 5px;
+        color: black;
+        height: 40px;
+        width: 40px;
+        line-height: 40px;
+        border-radius: 10px 0 0 10px ;
+        text-decoration: none;
+        text-align: center;
+    }
+}
 
+.galeria2:target{
+    transform: scale(1.2);
+}
+
+@media screen and  (max-width:800px){
+    .article__galeria{
+        margin-top: 5px;
+    }
+    // .galeria2{
+    //     .close{
+    //         left: 560px;
+    //         top: 130px;
+    //     }
+    // }
+}
+
+@media screen and  (max-width:780px){
+    .galeria2{
+        .close{
+            left: 550px;
+            top: 130px;
+        }
+    }
+}
+
+@media screen and  (max-width:700px){
+    .galeria2{
+        .close{
+            left: 500px;
+            top: 160px;
+        }
+    }
+}
+
+@media screen and  (max-width:620px){
+    .galeria2{
+        .close{
+            left: 440px;
+            top: 160px;
+        }
+    }
+}
+
+@media screen and  (max-width:550px){
+    .galeria2{
+        .close{
+            left: 380px;
+            top: 180px;
+        }
     }
 }
 
 
+@media screen and  (max-width:480px){
+    .galeria2{
+        .close{
+            left: 320px;
+            top: 200px;
+        }
+    }
+}
 
+@media screen and  (max-width:420px){
+    .galeria2{
+        .close{
+            left: 280px;
+            top: 220px;
+        }
+    }
+}
 
-
-// .galeria{
-//     display: grid;
-//     grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
-//     grid-gap: 10px;
-//     padding: 10px;
-
-//     article .texto__uno__galeria{
-//         margin-top: 10px;
-//         text-align: center;
-//         letter-spacing: 15px;
-//         font-family:fantasy;
-//     }
-//     img {
-//         width: 100%;
-//         border-radius: 10px;
-//         height: 150px;
-//         object-fit: cover;
-//         margin-top: 4vh;
-//         background-size: cover;
-//     }
-// }
-
-// aside .texto__dos__galeria{
-//     margin-top: 40px;
-//     text-align: center;
-//     padding: 10px;
-// }
-
-// @media screen and (min-width: 800px){
-//     .galeria{
-//         grid-template-columns: repeat(auto-fill, minmax(550px,1fr));
-//         grid-gap: 10px;
-//     }
-//     .galeria img {
-//         height: 300px;
-//         transform: translateY(200px);
-//         z-index: -10;
-//     }
-//     article .texto__uno__galeria{
-//         margin-top: 100px;
-//         text-align: center;
-//     }
-//     aside .texto__dos__galeria{
-//         margin-top: 220px;
-//         text-align: center;
-//         padding: 10px;
-//         font-size: 2em;
-//     }
-// }
+@media screen and  (max-width:380px){
+    .galeria2{
+        .close{
+            left: 240px;
+            top: 220px;
+        }
+    }
+}
