--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -1,24 +1,32 @@
-article #menu{
-    display: flex;
-    flex-direction: column;
-    min-height: 1430vh;
+   .menu{
+    margin-top: 2px;
+    background-color: rgb(191, 203, 214);
+   #menu{
     text-align: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 30em;
+    min-width: 100%;
+    padding: 20px;
+    }
+    .caja__menu{
+        border: 2px solid transparent;
+        border-radius: 10px;
+        box-shadow: 0px 1px 30px 1px;
+        margin-top: 20px;
+        background-color: rgb(75, 151, 214);
+    }
     h2{
         margin-top: 0px;
-        font-size: 3em;
+        font-size: 2.5em;
+        font-weight: 100;
         font-family: cursive;
         color: black;
-        background-color:rgb(126, 165, 113);
+        background-color:rgb(153, 117, 204);
+        border-radius: 10px;
     }
     p {
         margin-top: -15px;
-        color: white;
         font-size: 2em;
         color: black;
+        padding: 2px;
     }
     .ingredientes{
         font-size: 1.4em;
@@ -27,17 +35,22 @@ article #menu{
     .precios{
         font-size: 1.4em;
         color: rgb(27, 27, 27);
-        border-bottom:solid  5px rgb(126, 165, 113) ;
+        border-bottom:solid  5px black ;
     }
 }
 
-#footer__menu{
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: black;
-    margin-top: -24px;
+@media screen and (min-width:800px) {
+    #menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 80px;
+    }
+    .caja__menu{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 70%;
+    }
+    
 }
