--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,14 +1,30 @@
 #nosotros{
     h2{
+        font-size: 4em;
+        margin-top: 30px;
         text-align: center;
-        font-weight: 100;
-        text-decoration-line:underline;
     }
     #imagen__nosotros{
-        margin: 15px;
+        margin: 20px;
     }
     .contenedor__letras__nosotros{
         margin: 30px;
         font-size: 1em;
     }
+}
+
+@media screen and (min-width:800px) {
+    #nosotros{
+        h2{
+            margin-top: 100px;
+        }
+        #imagen__nosotros{
+            width: 50%;
+            float: left;
+        }
+        .contenedor__letras__nosotros{
+            line-height: 1.4;
+        }
+    }
+    
 }
