--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -2,7 +2,7 @@ footer{
     width: 100%;
     height: 15vh;
     background-color: black;
-    margin-top: auto;
+    margin-top: 0;
     .conteiner{
         display: flex;
         justify-content: center;
