--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -42,6 +42,13 @@
         margin-top: 10px;
         font-size: 3em;
     }
+    h3{
+        margin: 5px;
+        padding: 10px;
+    }
+    p{
+        margin-top: 10px;
+    }
     .carta__uno{
         background-color: rgb(79, 79, 79);
         color: white;
