--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,13 @@ footer #footer__dos {
   margin-top: 10px;
   font-size: 3em;
 }
+#nuestras__promociones h3 {
+  margin: 5px;
+  padding: 10px;
+}
+#nuestras__promociones p {
+  margin-top: 10px;
+}
 #nuestras__promociones .carta__uno {
   background-color: rgb(79, 79, 79);
   color: white;
@@ -402,23 +409,44 @@ footer #footer__dos {
   text-align: center;
 }
 #nosotros #imagen__nosotros {
-  margin: 20px;
+  margin: 60px;
+}
+#nosotros img {
+  margin-top: -40px;
+  width: 100%;
+  height: 30%;
 }
 #nosotros .contenedor__letras__nosotros {
-  margin: 30px;
-  font-size: 1em;
+  margin: 20px;
+  line-height: 1.3;
+  font-size: 1.2em;
+}
+#nosotros p {
+  margin-top: -60px;
 }
 
 @media screen and (min-width: 800px) {
+  #nosotros {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  #nosotros #imagen__nosotros {
+    width: 30vw;
+  }
+  #nosotros img {
+    transition: transform 1.2s;
+  }
   #nosotros h2 {
     margin-top: 100px;
   }
-  #nosotros #imagen__nosotros {
-    width: 50%;
-    float: left;
-  }
   #nosotros .contenedor__letras__nosotros {
-    line-height: 1.4;
+    margin-top: 100px;
+  }
+  #imagen__nosotros :hover {
+    transform: scale(1.5);
+    transition: transform 1.2s;
   }
 }
 /*contacto*/
