--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -13,8 +13,9 @@
         height: 30%;
     }
     .contenedor__letras__nosotros{
-        margin: 20px;
-        line-height: 1.3;
+        height: 70%;
+        margin: 0 300px 100px 300px;
+        line-height: 1.1;
         font-size: 1.2em;
     }
     p{
